tests/parser_samples/valid/bit_mask.mas
%i i1 {
    a;
    a(1) | b;
    a | b(2) | c;
}