tests/parser_samples/invalid/microinstruction/2.mas
%i a {
    a |
    b(1)
    | @a;
}